syntax = "proto3";


package ws;


service WsRpc {
    rpc Publish (ServeRequest) returns (ServeReply) {}
}

//rpc request
message ServeRequest {
  string request_id = 1;
  int64 uniq_id = 2;
  bytes data = 3;
}

//rpc response
message ServeReply {
  string request_id = 1;
  int32 err_code = 2;
  string message = 3;
}